# IbexVis

./: README.md  default_config.json  pyproject.toml
.github/workflows/: lint.yml  test.yml  webapp.yml
ibex_vis/: __init__.py  __main__.py  classes.py  cli.py  dummy_genie.py  dummy_inst.py  scan.py  vis.py
test/: test_scan.py  test_vis.py
test/data/: test-config.json  test-script.genie  trial_class.py  trial_class_2.py  trial_import.py
web/: LICENSE  README.md  ibexvis.css  ibexvis.js  index.html  package.json
