[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibex_vis"
authors = [{name = "Jacob Wilkins", email = "jacob.wilkins@stfc.ac.uk"}]
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.rst"
description = "A package for extracting information from castep outputs"
keywords = ["castep", "dft", "parser"]
license = {text = "BSD-3-Clause"}


classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Science/Research",
  "Topic :: File Formats :: JSON",
  "Topic :: Scientific/Engineering :: Physics",

  "License :: OSI Approved :: BSD License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["matplotlib"]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-argparse>=0.4.0", "sphinx-autodoc-typehints"]
lint = ["ruff==0.14.*"]
test = ["pytest==8.3.4", "pytest-cov==5.0.0"]

[project.scripts]
ibex_vis = "ibex_vis.cli:cli"

[project.urls]
Homepage="https://github.com/oerc0122/IbexVis"
Documentation = "https://oerc0122.github.io/IbexVis/"
Repository="https://github.com/oerc0122/IbexVis.git"
"Bug Tracker" = "https://github.com/oerc0122/IbexVis/issues"

[tool.setuptools.dynamic]
version = {attr = "ibex_vis.__version__"}

[tool.setuptools]
packages = ["ibex_vis"]


[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".#*",
    "__pycache__",
    "test"
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
preview = true
select = [
    "PL",  # Pylint
    "E",   # Pycodestyle
    "W",   # Pycodestyle warnings
    "F",   # Pyflakes
    "B",   # Flake8 bugbear
    "SIM", # Flake8 Simplify
    "A",   # Flake8 builtins
    "COM", # Flake8 commas
    "ISC", # Flake8 implicit string concat
    "RSE", # Flake8 raise
    "FA",  # Flake8 future
    "C4",  # Flake8 comprehensions
    "Q",   # Flake8 Quotes
    "RET", # Flake8 return
    "ARG", # Flake8 unused args
    "PTH", # Flake8 use pathlib
    "YTT", # Flake8 2020
    "ANN", # Flake8 annotations
    "BLE", # Flake8 Blind except
    "C4",  # Flake8 comprehensions
    "T10", # Flake8 debugger statements
    "T20", # Flake8 Print
    "FIX", # Flake8 Fixme
    "LOG", # Flake8 Logging
    "G",   # Flake8 Logging format
    "PIE", # Flake8 Pie
    "I",   # Isort
    "PERF",# Perflint
    "RUF", # Ruff specific
    "FURB",# Refurb
    "PERF",# Perflint
    # "D",   # Pydocstyle
    "DOC", # Pydoclint
    "UP",  # Pyupgrade
]
ignore = [
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0914",  # Too many locals
    "PLR0915",  # Too many statements
    "PLW2901",  # For loop variable overwritten
    "PLR2004",  # Magic constant value
    "D105",     # Magic method doc
    "ANN401",   # No typing.Any
    "COM812",   # Comma end
]

[tool.ruff.lint.per-file-ignores]
"dummy_genie.py" = [
    "PLR0917",  # Too many positionals
    "ARG004",   # Unused arg
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"

# remember to use single quotes for regex in TOML
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__[^.]*__$',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
    '^Class ',
]
